[tool.poetry]
name = "ana"
version = "0.1.0"
description = ""
authors = ["ignuki"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
PyYAML = "^5.3.1"
waitress = "^1.4.4"
schema = "^0.7.3"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
